# electrack-model

./: .gitignore  README.md  pyproject.toml  run.sh
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/workflows/: workflow-registry.json
datasets/acceptance/: DATASET_CARD.md
datasets/raw/fpic/: DATASET_CARD.md
datasets/raw/pcb-components-mechu/: DATASET_CARD.md
datasets/raw/pcb-electronic-components/: DATASET_CARD.md
datasets/raw/pcb-sae2u/: DATASET_CARD.md
datasets/yolo/: data.yaml
docs/: adding-a-class.md
scripts/: camera_demo.py  train_resilient.sh
specs/001-pcb-component-detection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-pcb-component-detection/checklists/: requirements.md
specs/001-pcb-component-detection/contracts/: detection-output.schema.json  eval-report.schema.json  model-io.md
src/electrack/: __init__.py  cli.py  config.py  config_constants.py  logging_setup.py
src/electrack/data/: classes.py  convert.py  datasets.py  manifest.py  splits.py
src/electrack/eval/: acceptance.py  harness.py  latency.py  metrics.py  threshold_sweep.py
src/electrack/export/: to_coreml.py
src/electrack/inference/: detector.py  validate.py
src/electrack/labeling/: guidelines.md
src/electrack/training/: train.py
tests/: conftest.py
tests/contract/: test_detection_output.py  test_eval_report.py
tests/integration/: test_add_class.py  test_inference.py  test_pipeline_repro.py
tests/unit/: test_data_utils.py  test_harness.py  test_metrics.py
(+1 files in other folders)
