[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "electrack"
version = "0.1.0"
description = "PCB komponent tespiti — cihaz-üstü nesne tespit modeli ve eğitim/değerlendirme hattı"
requires-python = ">=3.9"
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "pillow>=10.0",
    "opencv-python>=4.9",
    "jsonschema>=4.0",
]

# Ağır/opsiyonel bağımlılıklar: eğitim ve dışa aktarım aşamaları için.
# Çekirdek değerlendirme/çıkarım-sonrası mantık bunlar olmadan da çalışır (lazy import).
[project.optional-dependencies]
train = ["ultralytics>=8.3", "torch>=2.2"]
export = ["coremltools>=8.0"]
dev = ["pytest>=8.0", "ruff>=0.5", "black>=24.0"]

[project.scripts]
electrack = "electrack.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "heavy: bağımlılık (ultralytics/torch/coremltools) veya eğitilmiş model gerektirir",
]
